# postgres-mcp-server

./: Cargo.toml  Dockerfile  README_MCP_MIDDLEWARE.md  build.rs
.cursor/: no-service-sdk-server-setup.mdc
.github/workflows/: release.yaml
src/: main.rs  settings.rs
src/app/: app_ctx.rs
src/http_server/: startup.rs
src/mcp_middleware/: mcp_middleware.rs  mcp_output_contract.rs  mcp_payload.rs  mod.rs  sessions.rs  stream_updates.rs
src/mcp_middleware/tool_calls/: mcp_service.rs  mod.rs  toll_calls.rs  tool_call_executor.rs
src/mcp_service/: mod.rs  sql_request.rs
src/postgres/: postgres.rs
