[package]
name = "postgres-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }

my-http-server = { tag = "0.8.3", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "macros",
    "controllers",
    "static-files",
] }

rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }

my-settings-reader = { tag = "0.4.1", git = "https://github.com/MyJetTools/my-settings-reader.git" }

my-logger = { tag = "1.2.1", git = "https://github.com/MyJetTools/my-logger.git" }


my-postgres = { tag = "0.5.6", git = "https://github.com/MyJetTools/my-postgres.git", features = [
    "with-tls",
    "macros",
    "with-ssh",
] }

my-json5 = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-json5.git" }


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

async-trait = { version = "*" }

uuid = { version = "*", features = ["v4"] }

my-ai-agent = { tag = "0.1.0", git = "https://github.com/my-ai-utils/my-ai-agent.git", features = [
    "agent",
] }

flurl = { tag = "0.6.1", git = "https://github.com/MyJetTools/fl-url.git", features = [
    "with-ssh",
], optional = true }


[build-dependencies]
ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.3" }
